# TheEngine

./: .gitignore  .travis.yml  CMakeLists.txt  todo.txt
src/: CMakeLists.txt  common.h
src/engine_core/: CMakeLists.txt  engine_core.cpp  engine_core.h  engine_window.cpp  engine_window.h  resource_manager.cpp  scene_graph.cpp  scene_graph_elements.cpp
src/engine_core/core/: engine_core.cpp  engine_core.h  engine_window.cpp  engine_window.h  scene.cpp  scene.h
src/engine_core/include/: engine_core.h  engine_window.h
src/engine_core/public/: engine_core.h  input_keys.h  resource_manager.h  scene_graph.h  scene_graph_elements.h
src/engine_core/renderer/: renderer_base.h
src/engine_core/resource_data/: resource_data.cpp  resource_data.h
src/engine_core/src/: engine_window.cpp
src/main/: CMakeLists.txt  main.cpp
src/resource_data/: CMakeLists.txt  resource_data.cpp  resource_data.h
src/resource_loader/: resource_loader.cpp  resource_loader.h
src/samples/: CMakeLists.txt
src/samples/simple_window/: CMakeLists.txt  main.cpp  simple_window.cpp
src/samples/triangle/: CMakeLists.txt  sample.cpp  sample.h  triangle.cpp
src/utils/: CMakeLists.txt
src/utils/hxx/: CMakeLists.txt  callbacks.hxx  log.hxx  math.hxx  misc.hxx
src/utils/hxx/test/: CMakeLists.txt  callbacks_test.cpp
src/utils/log/: CMakeLists.txt  log.h
src/utils/log/include/: log.h
src/utils/math/: CMakeLists.txt
